# ReviewPilot

./: AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: demo-script.md
docs/plans/: 2026-05-30-core-pipeline.md
docs/research/: 2026-05-29-research-notes.md  2026-05-30-tech-validation.md
docs/specs/: 2026-05-30-reviewpilot-design.md  2026-05-31-harness-positioning.md  2026-05-31-large-diff-strategy.md  2026-05-31-repo-discovery-agent.md  AGENTS.md
evalset/: RESULTS.md  samples.json
reviewpilot/: analyzer.py  briefing.py  chat.py  cli.py  diffnorm.py  evaluate.py  guardrail.py  inspection.py  llm.py  models.py  prfetch.py  resolve.py  review_loop.py  runlog.py  sessions_store.py  tui.py  tui_app.py  web.py  workspace.py
reviewpilot/prompts/: __init__.py  reviewer.md
spikes/: smoke_aider_deepseek.py
tests/: conftest.py  test_analyzer.py  test_briefing.py  test_chat.py  test_cli.py  test_diffnorm.py  test_evaluate.py  test_guardrail.py  test_inspection.py  test_llm.py  test_models.py  test_prfetch.py  test_prfetch_repo.py  test_prompts.py  test_resolve.py  test_review_loop.py  test_runlog.py  test_sessions_store.py  test_tui.py  test_tui_app.py  test_tui_commands.py  test_web.py  test_workspace.py
