[project]
name = "reviewpilot"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = ["pydantic>=2,<3", "litellm==1.81.10"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
reviewpilot = "reviewpilot.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["reviewpilot*"]
