[project]
name = "reviewpilot"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = ["pydantic>=2,<3", "litellm==1.81.10", "fastapi>=0.110", "uvicorn>=0.27", "python-multipart>=0.0.9", "prompt_toolkit>=3", "textual>=0.80"]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]

[project.scripts]
reviewpilot = "reviewpilot.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["reviewpilot*"]
